--- a/hyprland.conf
+++ b/hyprland.conf
@@ -5,6 +5,9 @@ $activeBorderColor = rgba(b57b97ee) rgba(13131dee) 45deg
 
 general {
     col.active_border = $activeBorderColor
+    gaps_in = 2
+    gaps_out = 2
+    border_size = 2
 }
 
 group {
