--- a/colors.toml
+++ b/colors.toml
@@ -2,8 +2,8 @@ accent = "#7c7ca8"
 cursor = "#c8c8c8"
 foreground = "#c8c8c8"
 background = "#13131D"
-selection_foreground = "CellBackground"
-selection_background = "CellForeground"
+selection_foreground = "#c8c8c8"
+selection_background = "#13131D"
 
 color0 = "#13131D"
 color1 = "#EA90A8"
